--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,12 +10,18 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.Ovulio"
+        android:theme="@style/SplashScreenTheme"
         tools:targetApi="31">
         <activity
-            android:name=".SplashScreen"
+            android:name=".Onboard4"
+            android:exported="false" />
+        <activity
+            android:name=".Onboard3"
+            android:exported="false" />
+        <activity
+            android:name=".SplashScreenActivity"
             android:exported="true"
-            android:label="@string/title_activity_splash_screen"
+            android:label="@string/app_name"
             android:theme="@style/SplashScreenTheme">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -24,12 +30,28 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".MainActivity"
+            android:name=".Onboard1"
             android:exported="true"
             android:label="@string/app_name"
-            android:theme="@style/Theme.Ovulio">
-
-        </activity>
+            android:theme="@style/Theme.Ovulio" />
+        <activity
+            android:name=".Onboard2"
+            android:exported="true"
+            android:label="@string/app_name"
+            android:theme="@style/Theme.Ovulio" />
+        <activity
+            android:name=".Onboard3"
+            android:exported="true"
+            android:label="@string/app_name"
+            android:theme="@style/Theme.Ovulio" />
+        <activity
+            android:name=".Onboard4"
+            android:exported="true"
+            android:label="@string/app_name"
+            android:theme="@style/Theme.Ovulio" />
+        <meta-data
+            android:name="preloaded_fonts"
+            android:resource="@array/preloaded_fonts" />
     </application>
 
 </manifest>
