--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,13 +13,13 @@
         android:theme="@style/SplashScreenTheme"
         tools:targetApi="31">
         <activity
-            android:name=".Onboard4"
+            android:name=".login.SignIn"
             android:exported="false" />
         <activity
-            android:name=".Onboard3"
+            android:name=".login.SignUp"
             android:exported="false" />
         <activity
-            android:name=".SplashScreenActivity"
+            android:name=".splashscreen.SplashScreenActivity"
             android:exported="true"
             android:label="@string/app_name"
             android:theme="@style/SplashScreenTheme">
@@ -30,25 +30,18 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".Onboard1"
-            android:exported="true"
-            android:label="@string/app_name"
-            android:theme="@style/Theme.Ovulio" />
+            android:name=".onboarding.Onboard1"
+            android:exported="false" />
         <activity
-            android:name=".Onboard2"
-            android:exported="true"
-            android:label="@string/app_name"
-            android:theme="@style/Theme.Ovulio" />
+            android:name=".onboarding.Onboard2"
+            android:exported="false" />
         <activity
-            android:name=".Onboard3"
-            android:exported="true"
-            android:label="@string/app_name"
-            android:theme="@style/Theme.Ovulio" />
+            android:name=".onboarding.Onboard3"
+            android:exported="false" />
         <activity
-            android:name=".Onboard4"
-            android:exported="true"
-            android:label="@string/app_name"
-            android:theme="@style/Theme.Ovulio" />
+            android:name=".onboarding.Onboard4"
+            android:exported="false" />
+
         <meta-data
             android:name="preloaded_fonts"
             android:resource="@array/preloaded_fonts" />
