--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,9 @@
         android:theme="@style/SplashScreenTheme"
         tools:targetApi="31">
         <activity
+            android:name=".infocollect.privacy"
+            android:exported="false" />
+        <activity
             android:name=".login.SignIn"
             android:exported="false" />
         <activity
